Alteração do gráfico 3 da base 'CH Cumprida' para gráfico 'S'

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body{
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
+    background: linear-gradient(to right, #3a6073, #3a7bd5);
 }
 .sidebar{
     position: fixed;
