Criação dos gráficos I,E,R

--- a/views/ch_cumprida.handlebars
+++ b/views/ch_cumprida.handlebars
@@ -3,7 +3,7 @@
 <section id="dadosIntegralizacoes" style="display: none;">{{dadosIntegralizacoes}}</section>
 <section id="dadosSomaCH" style="display: none;">{{dadosSomaCH}}</section>
 
-<link rel="stylesheet" href="css/ch_cumprida/style.css">
+<link rel="stylesheet" href="css/graficos/style.css">
 <script src="js/graficos_ch_cumprida/grafico_1.js"></script>
 <script src="js/graficos_ch_cumprida/grafico_2.js"></script>
 <script src="js/graficos_ch_cumprida/grafico_3.js"></script>
