Criação do bloco 'Consultar turmas'

--- a/views/insucessos.handlebars
+++ b/views/insucessos.handlebars
@@ -22,6 +22,7 @@
     <div id="titulo" class="text"><h3>Insucessos de alunos</h3></div>
     <br>
     <div class="text">
+      {{>consultar_turmas}}
       <section class="flex-container">
         <div id="top_x_div_1" class="graficos" style="width: 1220px; height: 300px"></div>
         <div id="top_x_div_2" class="graficos" style="width: 1220px; height: 300px;"></div>
