Espaçamento bloco de tabelas consertado

--- a/views/consultar_disciplina.handlebars
+++ b/views/consultar_disciplina.handlebars
@@ -11,7 +11,7 @@
   <div class="content">
     <div id="titulo" class="text"><h3>Insucessos de alunos</h3></div>
     <br>
-        <section class="flex-container" >
+        <section class="flex-container bloco-tabela">
             <div id="tabela_1" class="graficos" style="height: 300px; width: 600px">
                 <table id="tabelaFrquenciaMateriais">
                     <caption id="table-title" style="font-size: 17px"></caption>
