--- a/views/partials/index.handlebars
+++ b/views/partials/index.handlebars
@@ -2,9 +2,9 @@
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
 <div class="sidebar">
-  <div class="logo_content">
+  <div class="logo_content" style="cursor: pointer;">
     <div class="logo">
-      <i class='bx bxl-dailymotion' ></i>
+      <i class='bx bxl-dailymotion'></i>
       <div class="logo_name">Dashboard</div>
       <i class='bx bx-menu' id="btn"></i>
     </div>
