--- a/views/consultar_disciplina.handlebars
+++ b/views/consultar_disciplina.handlebars
@@ -1,5 +1,7 @@
 {{>index}}
-<section id="dadosRelatDisciplina" style="display: none;">{{dadosRelatDisciplina}}</section>
+<script>
+    var dadosRelatDisciplina = {{{dadosRelatDisciplina}}}
+</script>
 
 <link rel="stylesheet" href="css/graficos/style.css">
 <link rel="stylesheet" href="css/consultar_turmas.css">
