--- a/views/partials/consultar_turmas.handlebars
+++ b/views/partials/consultar_turmas.handlebars
@@ -1,4 +1,6 @@
-<section id="dadosDisciplinas" style="display: none;">{{dadosDisciplinas}}</section>
+<script>
+    var dadosDisciplinas = {{{dadosDisciplinas}}};
+</script>
 
 <link rel="stylesheet" href="css/consultar_turmas.css">
 <script src="js/consultar_turmas.js"></script>
