Inserção do gráfico Cancelamentos relativos

--- a/views/insucessos.handlebars
+++ b/views/insucessos.handlebars
@@ -6,6 +6,7 @@
   var dadosRepAbsMedia = {{{dadosRepAbsMedia}}};
   var dadosRepFalta = {{{dadosRepFalta}}};
   var dadosRepMediaFalta = {{{dadosRepMediaFalta}}};
+  var dadosCancelamentosRelat = {{{dadosCancelamentosRelat}}}
   var dadosCancelamentos = {{{dadosCancelamentos}}};
   var dadosInsucessos = {{{dadosInsucessos}}};
 </script>
@@ -18,6 +19,7 @@
 <script src="js/graficos_insucessos/grafico_5.js"></script>
 <script src="js/graficos_insucessos/grafico_6.js"></script>
 <script src="js/graficos_insucessos/grafico_7.js"></script>
+<script src="js/graficos_insucessos/grafico_8.js"></script>
 
 <div class="home_content">
   <div class="content">
@@ -33,6 +35,7 @@
         <div id="top_x_div_5" class="graficos" style="width: 1220px; height: 300px"></div>
         <div id="top_x_div_6" class="graficos" style="width: 1220px; height: 300px"></div>
         <div id="top_x_div_7" class="graficos" style="width: 1220px; height: 300px"></div>
+        <div id="top_x_div_8" class="graficos" style="width: 1220px; height: 300px"></div>
       </section>
     </div>
   </div>
